# CarCV-metrics

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: model-evaulator.md
.claude/rules/: main.mdc
.cursor/agents/: agent-agent-creator.md  agent-command-creator.md  agent-inference-health-check.md  agent-prompt-engineer.md  agent-rule-creator.md  agent-skill-creator.md  agent-task-planner.md
.cursor/commands/: cleanup.md  git-commit-push.md  git-reset-to-commit.md  merge-file-from-branch.md  update-docs.md  update-rules.md  update_by_docs.md
.cursor/rules/: documentation.mdc  edge-ai.mdc  main.mdc  roadmap.mdc
configs/experiment/: trafficcamnet_eval.yaml  trafficcamnet_eval_test.yaml  vehiclemakenet_eval.yaml
docs/: architecture.md  datasets_and_models_overview.md
docs/about_datasets/: bdd100k.md
docs/experiments/: trafficcamnet_bdd100k_evaluation.md  trafficcamnet_ymad_preparation.md
docs/guides/: local-jupyterlab-remote-kernel.md
docs/rules/: arch-rules.md  plan.md  task.md
docs/system-design/: ML_System_Design_Document.md
docs/tasks/: task.md
notebooks/: Ymad_eda.ipynb  eval_trafficcamnet_analysis.ipynb
notebooks/.ipynb_checkpoints/: Ymad_eda-checkpoint.ipynb  (+2 more)
scripts/: eval_trafficcamnet.py  eval_trafficcamnet_gpu.py  populate_summary.py  visualize_results.py
tests/: test_batch_data_loader.py  test_batch_inference.py  test_gpu_vram_optimization.py
utils/: adaptive_batch_size.py  batch_data_loader.py  batch_inference.py  data_loader.py  gpu_memory.py  metrics.py  model_loader.py  postprocess.py
(+47 files in other folders)
